Fix the alignment issues for icon and defination list

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -430,6 +430,13 @@ ul ul ul {
   width: auto;
 }
 
+.doc span.image {
+  line-height: 1;
+  vertical-align: -0.5em;
+  display: inline-flex;
+  padding: 0 0.25ex;
+}
+
 .doc .abstract blockquote {
   font-size: 0.9375rem;
   margin: 1rem 0 1.5625rem 0;
@@ -619,7 +626,7 @@ table.tableblock pre code.language-bash.hljs {
 }
 
 .doc .dlist dt + dd {
-  margin-top: 0.125rem;
+  margin-top: var(--base-extra-small-space);
 }
 
 .doc .dlist dd > .openblock > .content > :first-child {
